--- a/src/components/Search.css
+++ b/src/components/Search.css
@@ -2,3 +2,12 @@
   color: #666;
   font-weight: bold;
 }
+
+.ant-input-affix-wrapper {
+  border: none;
+  border-radius: 0;
+}
+
+.ant-input-affix-wrapper > .ant-input {
+  padding: 3px 15px !important;
+}
